# joule.rs

./: Cargo.toml  README.md
src/: main.rs
src/commands/: installer.rs  search.rs  show.rs
src/structs/: Package.rs
src/utils/: ansi.rs  cacher.rs  requests.rs  threadeddownloader.rs
