# MAXIMUM PACKAGE LIMIT 150
[package]
name = "joule"
version = "0.1.0"
authors = ["Varun Potti <potti.varun07@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
minreq = { version = "2.3.1", features = ["https"] }
chrono="0.4.19"
difflib = "0.4.0"
miniserde="0.1.13"