# MAXIMUM PACKAGE LIMIT 200
[package]
name = "joule"
version = "0.1.0"
authors = ["Varun Potti <potti.varun07@gmail.com>"]
edition = "2018"

[target.x86_64-pc-windows-msvc]
linker = "rust-lld.exe"

[dependencies]
ansi_term = "0.12.1"
reqwest = {version="0.11.2", features=["blocking"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono="0.4.19"
difflib = "0.4.0"
indicatif="0.15.0"